src/objects/POS_Prop_Rev_Center_Xref__c.object
<CustomObject>
    <fields>
        <fullName>c_pos_rev_center_cd__c</fullName>
        <label>Pos rev center code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_pos_rev_center_name__c</fullName>
        <label>Pos rev center name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_pos_xref_prop_cd__c</fullName>
        <label>Pos xref property code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <label>Property code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>POS Prop Rev Center Xref</label>
    <nameField>
        <displayFormat>PPRCX-{00000}</displayFormat>
        <label>POS Prop Rev Center Xref Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS Prop Rev Center Xref</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>